<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_detalle_libro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.itesm.proyecto_final_libreria_online_srb.DetalleLibroActivity"
    tools:showIn="@layout/activity_detalle_libro">

    <TextView
        android:text="@string/libro_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <TableLayout
        android:layout_marginTop="15dp"
        android:layout_width="fill_parent"
        android:layout_height="99dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <TextView
                android:text="@string/isbn_lbl"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/isbn_lbl"
                android:layout_gravity="start"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/isbn"
                android:hint="@string/isbn_lbl"
                android:lines="1"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/titulo_lbl"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/titulo_lbl"
                android:layout_gravity="start"
                />

            <TextView
                android:hint="@string/titulo_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titulo"
                android:lines="1"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/existencia_lbl"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:id="@+id/existencia_lbl" />

            <TextView
                android:hint="@string/existencia_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/existencia"
                android:lines="1"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/precio_lbl"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:id="@+id/precio_lbl" />

            <TextView
                android:hint="@string/precio_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/precio"
                android:lines="1"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:text="@string/cantidad_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCantidadLbl"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_height="wrap_content"
        android:id="@+id/spCantidad"
        android:layout_width="180dp"
        android:layout_alignTop="@+id/tvCantidadLbl"
        android:layout_toEndOf="@+id/tvCantidadLbl"
        android:layout_marginStart="11dp" />

    <TextView
        android:text="@string/total_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spCantidad"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        android:id="@+id/tvTotalLbl" />

    <TextView
        android:hint="@string/total_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvTotalLbl"
        android:layout_toEndOf="@+id/tvTotalLbl"
        android:layout_marginStart="12dp"
        android:id="@+id/tvTotalCompra" />

    <Button
        android:text="@string/guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/tvTotalCompra"
        android:layout_marginBottom="39dp"
        android:id="@+id/bttnGuardarCompra" />

    <ImageView
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/iVDetalle"
        android:layout_height="130dp"
        android:layout_width="180dp"
        android:contentDescription="@string/image_desc"
        android:layout_marginBottom="28dp"
        android:layout_above="@+id/tvCantidadLbl"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
